# IDP

./: .gitmodules
src/: CMakeLists.txt  config.cmake
src/Examples/AsciiToUtf/: AsciiToUtf.cpp  CMakeLists.txt
src/Examples/C++11_14_17/: main.cpp
src/Examples/Command/: CMakeLists.txt  Command.cpp
src/Examples/FileSearch/: CMakeLists.txt  ThreadPool.h  main.cpp
src/Examples/Iterator/: Iterator.cpp
src/Examples/Observer/: Observer.cpp
src/Examples/SharedPtr/: CMakeLists.txt  ObjectAndCount.h  SharedFromThis.h  SharedPtr.h  TestUnit.h  main.cpp
src/Examples/SharedPtr/SharedPtrLib/: ObjectAndCount.h  SharedFromThis.h  SharedPtr.h  WeakPtr.h
src/Examples/SharedPtr/SharedPtrTest/: CMakeLists.txt  main.cpp
src/Examples/SharedPtr/SharedPtrUnitTest/: CMakeLists.txt  main.cpp
src/Examples/Singleton/: CMakeLists.txt  Problems  Singletone.cpp  Singletone.h
src/Examples/Strategy/: Strategy.cpp
